Fix select layout/spacing

--- a/shared/common/ui/select/select.module.scss
+++ b/shared/common/ui/select/select.module.scss
@@ -231,6 +231,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    & > svg {
+      margin: 0 8px 0 12px;
+    }
   }
 }
 
